@@ -6,7 +6,8 @@
     <packaging>pom</packaging>
     <version>2.3.1-SNAPSHOT</version>
     <name>SCH KP Application</name>
-    <url>http://kir-dev.sch.bme.hu</url>
+    <inceptionYear>2008</inceptionYear>
+    
     <licenses>
         <license>
             <name>BSD License (original)</name>
@@ -15,36 +16,262 @@
         </license>
     </licenses>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>2.2</version>
-                <configuration>
-                    <configLocation>resources/checkstyle.xml</configLocation>
-                </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.codehaus.plexus</groupId>
-                        <artifactId>plexus-velocity</artifactId>
-                        <version>1.1.3</version>
-                        <exclusions>
-                            <exclusion>
+    <developers>
+        <developer>
+            <id>hege</id>
+            <name>Adam Lantos</name>
+            <timezone>GMT+1</timezone>
+        </developer>
+        <developer>
+            <id>messo</id>
+            <name>Balint Krivan</name>
+            <timezone>GMT+1</timezone>
+        </developer>
+        <developer>
+            <id>aldaris</id>
+            <name>Peter Major</name>
+            <email>majorpetya at sch dot bme dot hu</email>
+            <timezone>GMT+1</timezone>
+        </developer>
+    </developers>
+    <contributors>
+        <contributor>
+            <name>Andras Ivanyi</name>
+            <timezone>GMT+1</timezone>
+        </contributor>
+        <contributor>
+            <name>Antal Kiss</name>
+            <timezone>GMT+1</timezone>
+        </contributor>
+        <contributor>
+            <name>Arpad Boda</name>
+            <timezone>GMT+1</timezone>
+        </contributor>
+        <contributor>
+            <name>Balazs Nemeth</name>
+            <timezone>GMT+1</timezone>
+        </contributor>
+        <contributor>
+            <name>Balazs Varga</name>
+            <timezone>GMT+1</timezone>
+        </contributor>
+        <contributor>
+            <name>Gabor Halasz</name>
+            <timezone>GMT+1</timezone>
+        </contributor>
+        <contributor>
+            <name>Gabor Nyiri</name>
+            <timezone>GMT+1</timezone>
+        </contributor>
+        <contributor>
+            <name>Tamas Sallai</name>
+            <timezone>GMT+1</timezone>
+        </contributor>
+    </contributors>
+
+    <organization>
+        <name>Kir-Dev</name>
+        <url>https://kir-dev.sch.bme.hu</url>
+    </organization>
+    <mailingLists>
+        <mailingList>
+            <name>jee-dev</name>
+            <post>jee-dev [at] sch [dot] bme [dot] hu</post>
+            <subscribe>jee-dev-subscribe [at] sch [dot] bme [dot] hu</subscribe>
+            <unsubscribe>jee-dev-unsubscribe [at] sch [dot] bme [dot] hu</unsubscribe>
+            <archive>https://lists.sch.bme.hu/wws/arc/jee-dev</archive>
+        </mailingList>
+    </mailingLists>
+
+    <issueManagement>
+        <system>Redmine</system>
+        <url>https://kir-dev.sch.bme.hu/redmine</url>
+    </issueManagement>
+
+    <scm>
+        <connection>scm:http://idp.sch.bme.hu/pub/aldaris/korok</connection>
+        <url>http://idp.sch.bme.hu/gitweb</url>
+    </scm>
+
+    <profiles>
+        <profile>
+            <id>hudson</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-checkstyle-plugin</artifactId>
+                        <version>2.2</version>
+                        <configuration>
+                            <configLocation>resources/checkstyle.xml</configLocation>
+                        </configuration>
+                        <dependencies>
+                            <dependency>
+                                <groupId>org.codehaus.plexus</groupId>
+                                <artifactId>plexus-velocity</artifactId>
+                                <version>1.1.3</version>
+                                <exclusions>
+                                    <exclusion>
                                 <!--
      Use the version specified by checkstyle:checkstyle instead
      -->
-                                <artifactId>commons-collections</artifactId>
-                                <groupId>commons-collections</groupId>
-                            </exclusion>
-                            <exclusion>
-                                <artifactId>plexus-utils</artifactId>
-                                <groupId>plexus</groupId>
-                            </exclusion>
-                        </exclusions>
-                    </dependency>
-                </dependencies>
-            </plugin>
+                                        <artifactId>commons-collections</artifactId>
+                                        <groupId>commons-collections</groupId>
+                                    </exclusion>
+                                    <exclusion>
+                                        <artifactId>plexus-utils</artifactId>
+                                        <groupId>plexus</groupId>
+                                    </exclusion>
+                                </exclusions>
+                            </dependency>
+                        </dependencies>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <configuration>
+                            <minmemory>128m</minmemory>
+                            <maxmemory>256m</maxmemory>
+                            <quiet>true</quiet>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>attach-sources</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-source-plugin</artifactId>
+                        <inherited>true</inherited>
+                        <executions>
+                            <execution>
+                                <id>attach-sources</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>findbugs-maven-plugin</artifactId>
+                        <version>2.3.1</version>
+                        <configuration>
+                            <findbugsXmlOutput>true</findbugsXmlOutput>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <inherited>true</inherited>
+                        <configuration>
+                            <skipTests>false</skipTests>
+                            <forkMode>once</forkMode>
+                            <argLine>-Xmx512m -XX:MaxPermSize=256m -Dkorok.test.config=../resources/test/config.properties</argLine>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+
+            <reporting>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-pmd-plugin</artifactId>
+                        <configuration>
+                            <targetJdk>1.6</targetJdk>
+                            <linkXRef>true</linkXRef>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-jxr-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </reporting>
+    
+            <dependencies>
+                <dependency>
+                    <groupId>org.hibernate</groupId>
+                    <artifactId>hibernate-entitymanager</artifactId>
+                    <version>3.5.0-Final</version>
+                    <scope>test</scope>
+                </dependency>
+            </dependencies>
+        </profile>
+    </profiles>
+    
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>hu.sch</groupId>
+                <artifactId>sch-kp-domain</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>hu.sch</groupId>
+                <artifactId>sch-kp-ear</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>hu.sch</groupId>
+                <artifactId>sch-kp-ejb-impl</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>hu.sch</groupId>
+                <artifactId>sch-kp-ejb-services</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>hu.sch</groupId>
+                <artifactId>sch-kp-test</artifactId>
+                <version>${project.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>hu.sch</groupId>
+                <artifactId>sch-kp-web</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>hu.sch</groupId>
+                <artifactId>sch-kp-web-services</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>1.5.8</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>log4j</groupId>
+                <artifactId>log4j</artifactId>
+                <version>1.2.14</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.7</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.glassfish.extras</groupId>
+                <artifactId>glassfish-embedded-all</artifactId>
+                <version>3.1-SNAPSHOT</version>
+                <scope>test</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+    
+    <build>
+        <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
@@ -83,79 +310,15 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
+                <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <minmemory>128m</minmemory>
-                    <maxmemory>256m</maxmemory>
-                    <quiet>true</quiet>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>attach-sources</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <inherited>true</inherited>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>attach-sources</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>findbugs-maven-plugin</artifactId>
-                <version>2.3.1</version>
-                <configuration>
-                    <findbugsXmlOutput>true</findbugsXmlOutput>
+                    <skipTests>true</skipTests>
                 </configuration>
             </plugin>
         </plugins>
     </build>
-    <reporting>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-pmd-plugin</artifactId>
-                <configuration>
-                    <linkXRef>true</linkXRef>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jxr-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </reporting>
-    <pluginRepositories>
-        <pluginRepository>
-            <id>mc-release</id>
-            <name>Local Maven repository of releases</name>
-            <url>http://mc-repo.googlecode.com/svn/maven2/releases</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-        </pluginRepository>
-        <pluginRepository>
-            <id>maven-annotation-plugin</id>
-            <name>maven-annotation-processor Repository</name>
-            <url>http://maven-annotation-plugin.googlecode.com/svn/trunk/mavenrepo</url>
-        </pluginRepository>
-    </pluginRepositories>
+
     <repositories>
-        <!-- for jta-1.0.0B -->
         <repository>
             <id>sun</id>
             <layout>default</layout>
@@ -170,7 +333,7 @@
         <repository>
             <id>wicket-stuff</id>
             <layout>default</layout>
-            <url>http://wicketstuff.org/maven/repository</url>
+            <url>http://oss.sonatype.org/content/groups/public</url>
         </repository>
         <repository>
             <id>wicket-tree</id>
@@ -194,5 +357,6 @@
         <module>sch-kp-web</module>
         <module>sch-kp-web-services</module>
         <module>sch-kp-ear</module>
+        <module>sch-kp-test</module>
     </modules>
 </project>
